Create models initialization background task

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -16,11 +16,22 @@ swapped.args.inspection.warning=Possibly swapped function arguments(Probability:
 binary.operator.inspection.display=DeepBugs: Possibly incorrect binary operator
 binary.operand.inspection.display=DeepBugs: Possibly incorrect binary operand
 swapped.args.inspection.display=DeepBugs: Possibly swapped function arguments
-download.task.title=DeepBugs: Download models and embeddings
-notification.group.id=DeepBugs Error
-download.notification = Download models
-notification.title=DeepBugsPlugin
-error.notification.message=Could not load models. Please, check your Internet connection.
+download.task.title=DeepBugsPlugin: Download models and embeddings
+initialize.task.title=DeepBugsPlugin: Initialize models
+init.node.types=Initializing node types
+init.types=Initializing types
+init.operators=Initializing operators
+init.tokens=Initializing tokens
+init.swapped.args.model=Initializing swapped args detector
+init.bin.operator.model=Initializing binary operators detector
+init.bin.operand.model=Initializing binary operands detector
+notification.group.id=DeepBugsPlugin Error
+download.notification=Download models
+notification.title=<b>DeepBugsPlugin</b>
+error.notification.message=Could not load models. Please, check your Internet connection.\n \
+                           <a href="">Restart download</a>
 success.notification.message=Model files are successfully loaded.
+cancel.notification.message=Downloading of required model files was cancelled.\n \
+                            <a href="">Restart download</a>
 download.notification.message=Model files are required.\n \
                               <a href="">Download models</a>
