--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -2,9 +2,9 @@ report.error.to.plugin.vendor=Report error to plugin vendor
 report.error.progress.dialog.text=Submitting error report...
 report.error.connection.failure=Could not communicate with GitHub.\n\
                                   Please <a href="{0}">create issue</a>.
-git.issue.text=<a href="{0}">Created issue {1}</a>. Thank you for your feedback! \n \
+git.issue.text=<a href="{0}">Created issue {1}</a>. Thank you for your feedback! \n\
             	  Make sure you have the latest plugin version.
-git.issue.duplicate.text=<a href="{0}">A similar issues was already reported (#{1})</a>. \n \
+git.issue.duplicate.text=<a href="{0}">A similar issues was already reported (#{1})</a>. \n\
                             Thank you for your feedback! Make sure you have the latest plugin version.
 bin.operator.threshold.label=Incorrect binary operator inspection threshold, %
 bin.operand.threshold.label=Incorrect binary operand inspection threshold, %
@@ -18,20 +18,17 @@ binary.operand.inspection.display=DeepBugs: Possibly incorrect binary operand
 swapped.args.inspection.display=DeepBugs: Possibly swapped function arguments
 download.task.title=DeepBugsPlugin: Download models and embeddings
 initialize.task.title=DeepBugsPlugin: Initialize models
-init.node.types=Initializing node types
-init.types=Initializing types
-init.operators=Initializing operators
-init.tokens=Initializing tokens
-init.swapped.args.model=Initializing swapped args detector
-init.bin.operator.model=Initializing binary operators detector
-init.bin.operand.model=Initializing binary operands detector
-notification.group.id=DeepBugsPlugin Error
+download.model.file=DeepBugsPlugin: Downloading {0}
+init.model.file=DeepBugsPlugin: Initializing {0}
+notification.group.id=DeepBugsPlugin
+success.notification.group.id=DeepBugsPluginSuccess
+error.notification.group.id=DeepBugsPluginError
 download.notification=Download models
 notification.title=<b>DeepBugsPlugin</b>
-error.notification.message=Could not load models. Please, check your Internet connection.\n \
+error.notification.message=Could not load models. Please, check your Internet connection.<br>\n\
                            <a href="">Restart download</a>
 success.notification.message=Model files are successfully loaded.
-cancel.notification.message=Downloading of required model files was cancelled.\n \
+cancel.notification.message=Downloading of required model files was cancelled.<br>\n\
                             <a href="">Restart download</a>
-download.notification.message=Model files are required.\n \
+download.notification.message=Model files are required.<br>\n\
                               <a href="">Download models</a>
