--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 ideaVersion=2018.3.2
 javaVersion=1.8
 kotlinVersion=1.2.51
-dl4j_version=1.0.0-alpha
+tf_version=1.11.0
 serializationVersion=0.6.1
