Generalize function calls extraction. Update plugin description

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -21,7 +21,6 @@ initialize.task.title=DeepBugsPlugin: Initialize models
 download.model.file=DeepBugsPlugin: Downloading {0}
 init.model.file=DeepBugsPlugin: Initializing {0}
 notification.group.id=DeepBugsPlugin
-success.notification.group.id=DeepBugsPluginSuccess
 error.notification.group.id=DeepBugsPluginError
 download.notification=Download models
 notification.title=<b>DeepBugsPlugin</b>
@@ -32,3 +31,4 @@ cancel.notification.message=Downloading of required model files was cancelled.<b
                             <a href="">Restart download</a>
 download.notification.message=Model files are required.<br>\n\
                               <a href="">Download models</a>
+incompatible.version.notification.title=DeepBugsPlugin requires a 64-bit JVM.
