Remove hardcoded messages. Edit plugin description

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -24,11 +24,13 @@ notification.group.id=DeepBugsPlugin
 error.notification.group.id=DeepBugsPluginError
 download.notification=Download models
 notification.title=<b>DeepBugsPlugin</b>
-error.notification.message=Could not load models. Please, check your Internet connection.<br>\n\
+error.notification.message=Could not load models.<br>\n\
                            <a href="">Restart download</a>
-success.notification.message=Model files are successfully loaded.
 cancel.notification.message=Downloading of required model files was cancelled.<br>\n\
                             <a href="">Restart download</a>
 download.notification.message=Model files are required.<br>\n\
                               <a href="">Download models</a>
-incompatible.version.notification.title=DeepBugsPlugin requires a 64-bit JVM.
+incompatible.version.notification.message=DeepBugsPlugin requires a 64-bit JVM.
+bin.operator.inspection.short.name=DeepBugsBinOperator
+bin.operand.inspection.short.name=DeepBugsBinOperand
+swapped.args.inspection.short.name=DeepBugsSwappedArgs
