--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin url="https://github.com/ml-in-programming/DeepBugsPlugin">
-    <name>DeepBugs</name>
+    <name>DeepBugsPlugin</name>
     <id>DeepBugsPlugin</id>
     <vendor email="timofey.bryksin@gmail.com" url="https://research.jetbrains.org/ru/groups/ml_methods">Timofey Bryksin
     </vendor>
