Create custom exception for used platform. Additional info in plugin.xml

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -30,7 +30,7 @@ cancel.notification.message=Downloading of required model files was cancelled.<b
                             <a href="">Restart download</a>
 download.notification.message=Model files are required.<br>\n\
                               <a href="">Download models</a>
-incompatible.version.notification.message=DeepBugsPlugin requires a 64-bit JVM.
+platform.exception.message=DeepBugsPlugin is not supported on the current platform
 bin.operator.inspection.short.name=DeepBugsBinOperator
 bin.operand.inspection.short.name=DeepBugsBinOperand
 swapped.args.inspection.short.name=DeepBugsSwappedArgs
