Create notification constructor. Fix parameter name extraction. Add an option to reset all threshold values to default

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -10,6 +10,7 @@ bin.operator.threshold.label=Incorrect binary operator inspection threshold, %
 bin.operand.threshold.label=Incorrect binary operand inspection threshold, %
 swapped.args.threshold.label=Swapped function arguments inspection threshold, %
 set.default=Default
+set.default.all=Default all
 binary.operator.inspection.warning=Possibly incorrect binary operator(Probability: {0})
 binary.operand.inspection.warning=Possibly incorrect binary operand(Probability: {0})
 swapped.args.inspection.warning=Possibly swapped function arguments(Probability: {0})
@@ -21,15 +22,12 @@ initialize.task.title=DeepBugsPlugin: Initialize models
 download.model.file=DeepBugsPlugin: Downloading {0}
 init.model.file=DeepBugsPlugin: Initializing {0}
 notification.group.id=DeepBugsPlugin
-error.notification.group.id=DeepBugsPluginError
-download.notification=Download models
+download.text=Download models
+restart.download.text=Restart download
 notification.title=<b>DeepBugsPlugin</b>
-error.notification.message=Could not load models.<br>\n\
-                           <a href="">Restart download</a>
-cancel.notification.message=Downloading of required model files was cancelled.<br>\n\
-                            <a href="">Restart download</a>
-download.notification.message=Model files are required.<br>\n\
-                              <a href="">Download models</a>
+error.notification.message=Could not load models.
+cancel.notification.message=Downloading of required model files was cancelled.
+download.notification.message=Model files are required.
 platform.exception.message=DeepBugsPlugin is not supported on the current platform
 bin.operator.inspection.short.name=DeepBugsBinOperator
 bin.operand.inspection.short.name=DeepBugsBinOperand
