--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,9 +27,6 @@
     Threshold is configurable and could be set manually in <code>Preferences/Settings | Tools | DeepBugs</code>.
     ]]></description>
 
-    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-         on how to target different products -->
-    <!-- uncomment to enable plugin in all products -->
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.python</depends>
 
@@ -44,8 +41,8 @@
                                  instance="org.jetbrains.research.groups.ml_methods.deepbugs.settings.DeepBugsInspectionConfigurable"/>
 
     </extensions>
-    <!--
-    <actions>
+
+   <!-- <actions>
         <group id="DeepBugs.Menu" text="DeepBugs" description="DeepBugs plugin">
             <add-to-group group-id="MainMenu" anchor="last"/>
             <action
@@ -55,11 +52,12 @@
                     description="Collect Data from files under project root"
             />
         </group>
-    Action for throwing an exception just to test the reporting of errors into the GitHub database, uncomment if needed-->
+        Action for throwing an exception just to test the reporting of errors into the GitHub database, uncomment if
+        needed-->
 
-    <!--<action id="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction"
-            class="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction" text="FireArtificialException">
-        <add-to-group group-id="ToolsMenu" anchor="first"/>
-       </action>
+        <!--<action id="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction"
+                class="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction" text="FireArtificialException">
+            <add-to-group group-id="ToolsMenu" anchor="first"/>
+           </action>
     </actions>-->
 </idea-plugin>
