Change Internet connection error description

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -25,10 +25,10 @@ notification.group.id=DeepBugsPlugin
 download.text=Download models
 restart.download.text=Restart download
 notification.title=<b>DeepBugsPlugin</b>
-error.notification.message=Could not load models.
+error.notification.message=Could not load models. Please, check your Internet connection.
 cancel.notification.message=Downloading of required model files was cancelled.
 download.notification.message=Model files are required.
-platform.exception.message=DeepBugsPlugin is not supported on the current platform
+platform.exception.message=DeepBugsPlugin is not supported on the current platform.
 bin.operator.inspection.short.name=DeepBugsBinOperator
 bin.operand.inspection.short.name=DeepBugsBinOperand
 swapped.args.inspection.short.name=DeepBugsSwappedArgs
