Edit inspection display messages

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -11,14 +11,14 @@ bin.operand.threshold.label=Incorrect binary operand inspection threshold, %
 swapped.args.threshold.label=Swapped function arguments inspection threshold, %
 set.default=Default
 set.default.all=Default all
-binary.operator.inspection.warning=Possibly incorrect binary operator(Probability: {0})
-binary.operand.inspection.warning=Possibly incorrect binary operand(Probability: {0})
-swapped.args.inspection.warning=Possibly swapped function arguments(Probability: {0})
+binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
+binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
+swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
 binary.operator.inspection.display=DeepBugs: Possibly incorrect binary operator
 binary.operand.inspection.display=DeepBugs: Possibly incorrect binary operand
 swapped.args.inspection.display=DeepBugs: Possibly swapped function arguments
 download.task.title=DeepBugsPlugin: Download models and embeddings
-initialize.task.title=DeepBugsPlugin: Initialize models
+initialize.task.title=DeepBugsPlugin: Initialize models and embeddings
 download.model.file=DeepBugsPlugin: Downloading {0}
 init.model.file=DeepBugsPlugin: Initializing {0}
 notification.group.id=DeepBugsPlugin
