--- a/DeepBugsPluginJavaScript/src/main/resources/META-INF/plugin.xml
+++ b/DeepBugsPluginJavaScript/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin url="https://github.com/ml-in-programming/DeepBugsPlugin">
-    <name>DeepBugsPython</name>
-    <id>DeepBugsPython</id>
+    <name>DeepBugsJavaScript</name>
+    <id>DeepBugsJavaScript</id>
     <vendor email="timofey.bryksin@gmail.com" url="https://research.jetbrains.org/ru/groups/ml_methods">Timofey Bryksin
     </vendor>
     <version>0.1</version>
@@ -30,17 +30,17 @@
     ]]></description>
 
     <depends>com.intellij.modules.lang</depends>
-    <depends>com.intellij.modules.python</depends>
+    <depends>JavaScript</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <inspectionToolProvider
-                implementation="org.jetbrains.research.groups.ml_methods.deepbugs.python.inspection_providers.PyDeepBugsProvider"/>
+                implementation="org.jetbrains.research.groups.ml_methods.deepbugs.javascript.inspection_providers.JSDeepBugsProvider"/>
         <errorHandler
                 implementation="org.jetbrains.research.groups.ml_methods.deepbugs.services.error_reporting.GitHubErrorReporter"/>
         <applicationService
-                serviceImplementation="org.jetbrains.research.groups.ml_methods.deepbugs.python.settings.JSDeepBugsInspectionConfig"/>
-        <applicationConfigurable groupId="tools" displayName="DeepBugsPython"
-                                 instance="org.jetbrains.research.groups.ml_methods.deepbugs.python.settings.PyDeepBugsInspectionConfigurable"/>
+                serviceImplementation="org.jetbrains.research.groups.ml_methods.deepbugs.javascript.settings.JSDeepBugsInspectionConfig"/>
+        <applicationConfigurable groupId="tools" displayName="DeepBugsJavaScript"
+                                 instance="org.jetbrains.research.groups.ml_methods.deepbugs.javascript.settings.JSDeepBugsInspectionConfigurable"/>
 
     </extensions>
 
