--- a/services/src/main/resources/DeepBugsPluginServicesBundle.properties
+++ b/services/src/main/resources/DeepBugsPluginServicesBundle.properties
@@ -16,11 +16,10 @@ restart.download.text=Restart download
 error.notification.message=Could not load models. Please, check your Internet connection.
 cancel.notification.message=Downloading of required model files was cancelled.
 download.notification.message=Model files are required.
-platform.exception.message=DeepBugs is not supported on the current platform.
-binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
-binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
-swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
+platform.exception.message={0} is not supported on the current platform.
 download.text=Download models
 download.model.file=Downloading {0}
 init.model.file=Initializing {0}
+download.task.title={0}: Download models and embeddings
+initialize.task.title={0} : Initialize models and embeddings
 
