Change log messages format. Add missing gradle files

--- a/DeepBugsPluginPython/src/main/resources/DeepBugsPythonBundle.properties
+++ b/DeepBugsPluginPython/src/main/resources/DeepBugsPythonBundle.properties
@@ -1,10 +1,10 @@
-binary.operator.inspection.display=DeepBugsPython: Possibly incorrect binary operator
-binary.operand.inspection.display=DeepBugsPython: Possibly incorrect binary operand
+bin.operator.inspection.display=DeepBugsPython: Possibly incorrect binary operator
+bin.operand.inspection.display=DeepBugsPython: Possibly incorrect binary operand
 swapped.args.inspection.display=DeepBugsPython: Possibly swapped function arguments
 bin.operator.inspection.short.name=PyDeepBugsBinOperator
 bin.operand.inspection.short.name=PyDeepBugsBinOperand
 swapped.args.inspection.short.name=PyDeepBugsSwappedArgs
-binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
-binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
+bin.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
+bin.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
 swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
 plugin.name=DeepBugsPython
