--- a/DeepBugsPluginJavaScript/settings.gradle
+++ b/DeepBugsPluginJavaScript/settings.gradle
@@ -1,4 +1,6 @@
-rootProject.name = 'DeepBugsPluginJavaScript'
+rootProject.name = 'DeepBugsJavaScript'
 include ':services'
 project(":services").projectDir = file("../services")
+include ':logger'
+project(":logger").projectDir = file("../logger")
 
