--- a/DeepBugsPluginPython/settings.gradle
+++ b/DeepBugsPluginPython/settings.gradle
@@ -1,3 +1,5 @@
-rootProject.name = 'DeepBugsPluginPython'
+rootProject.name = 'DeepBugsPython'
 include ':services'
 project(":services").projectDir = file("../services")
+include ':logger'
+project(":logger").projectDir = file("../logger")
