--- a/DeepBugsPluginJavaScript/settings.gradle
+++ b/DeepBugsPluginJavaScript/settings.gradle
@@ -1,6 +1,6 @@
-rootProject.name = 'DeepBugsJavaScript'
+rootProject.name = 'DeepBugsPluginJavaScript'
 include ':services'
 project(":services").projectDir = file("../services")
-include ':logger'
-project(":logger").projectDir = file("../logger")
+//include ':logger'
+//project(":logger").projectDir = file("../logger")
 
