--- a/DeepBugsPluginJavaScript/src/main/resources/DeepBugsJSBundle.properties
+++ b/DeepBugsPluginJavaScript/src/main/resources/DeepBugsJSBundle.properties
@@ -1,7 +1,10 @@
-binary.operator.inspection.display=DeepBugsJavaScript: Possibly incorrect binary operator
-binary.operand.inspection.display=DeepBugsJavaScript: Possibly incorrect binary operand
-swapped.args.inspection.display=DeepBugsJavaScript: Possibly swapped function arguments
-bin.operator.inspection.short.name=JSDeepBugsBinOperator
-bin.operand.inspection.short.name=JSDeepBugsBinOperand
-swapped.args.inspection.short.name=JSDeepBugsSwappedArgs
-plugin.name=DeepBugsJavaScript
+javascript.binary.operator.inspection.display=DeepBugsJavaScript: Possibly incorrect binary operator
+javascript.binary.operand.inspection.display=DeepBugsJavaScript: Possibly incorrect binary operand
+javascript.swapped.args.inspection.display=DeepBugsJavaScript: Possibly swapped function arguments
+javascript.bin.operator.inspection.short.name=JSDeepBugsBinOperator
+javascript.bin.operand.inspection.short.name=JSDeepBugsBinOperand
+javascript.swapped.args.inspection.short.name=JSDeepBugsSwappedArgs
+javascript.binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
+javascript.binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
+javascript.swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
+javascript.plugin.name=DeepBugsJavaScript
