--- a/DeepBugsPluginPython/build.gradle
+++ b/DeepBugsPluginPython/build.gradle
@@ -13,15 +13,15 @@ allprojects {
     apply plugin: 'org.jetbrains.intellij'
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
     compileKotlin {
         kotlinOptions.jvmTarget = javaVersion
     }
 }
 
-repositories {
-    mavenCentral()
-    jcenter()
-}
 
 intellij {
     version ideaVersion
@@ -50,5 +50,5 @@ buildPlugin {
 
 dependencies {
     compile project(':services')
-    compile project(':logger')
+    //compile project(':logger')
 }
