--- a/DeepBugsPluginPython/src/main/resources/DeepBugsPythonBundle.properties
+++ b/DeepBugsPluginPython/src/main/resources/DeepBugsPythonBundle.properties
@@ -1,10 +1,10 @@
-bin.operator.inspection.display=DeepBugsPython: Possibly incorrect binary operator
-bin.operand.inspection.display=DeepBugsPython: Possibly incorrect binary operand
-swapped.args.inspection.display=DeepBugsPython: Possibly swapped function arguments
-bin.operator.inspection.short.name=PyDeepBugsBinOperator
-bin.operand.inspection.short.name=PyDeepBugsBinOperand
-swapped.args.inspection.short.name=PyDeepBugsSwappedArgs
-bin.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
-bin.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
-swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
-plugin.name=DeepBugsPython
+python.bin.operator.inspection.display=DeepBugsPython: Possibly incorrect binary operator
+python.bin.operand.inspection.display=DeepBugsPython: Possibly incorrect binary operand
+python.swapped.args.inspection.display=DeepBugsPython: Possibly swapped function arguments
+python.bin.operator.inspection.short.name=PyDeepBugsBinOperator
+python.bin.operand.inspection.short.name=PyDeepBugsBinOperand
+python.swapped.args.inspection.short.name=PyDeepBugsSwappedArgs
+python.bin.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
+python.bin.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
+python.swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
+python.plugin.name=DeepBugsPython
