--- a/DeepBugsPython/src/main/resources/META-INF/plugin.xml
+++ b/DeepBugsPython/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,8 @@
     <depends>com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <statistic.eventLog.eventLoggerProvider
+                implementation="org.jetbrains.research.groups.ml_methods.deepbugs.services.logger.DeepBugsEventLoggerProvider"/>
         <inspectionToolProvider
                 implementation="org.jetbrains.research.groups.ml_methods.deepbugs.python.inspection_providers.PyDeepBugsProvider"/>
         <errorHandler
