--- a/services/build.gradle
+++ b/services/build.gradle
@@ -5,6 +5,10 @@ repositories {
     jcenter()
 }
 
+intellij {
+    version = '2019.2'
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '2.1.5'
@@ -12,5 +16,4 @@ dependencies {
     compile group: 'com.beust', name: 'klaxon', version: '3.0.1'
     compile group: 'org.tensorflow', name: 'tensorflow', version: tf_version
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    //testCompile group: 'junit', name: 'junit', version: '4.12'
 }
