--- a/DeepBugsPython/src/main/resources/META-INF/plugin.xml
+++ b/DeepBugsPython/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,9 @@
 <idea-plugin url="https://github.com/ml-in-programming/DeepBugsPlugin">
     <name>DeepBugsPython</name>
     <id>DeepBugsPython</id>
-    <vendor email="anastasia.i.tuchina@gmail.com" url="https://research.jetbrains.org/ru/groups/ml_methods">Anastasia Tuchina
+    <vendor url="https://research.jetbrains.org/ru/groups/ml_methods">
+        Machine Learning Methods in Software Engineering Research Group
     </vendor>
-    <version>0.1</version>
     <description><![CDATA[
     DeepBugsPython plugin provides several code inspections intended for detecting bugs and code quality issues.
     <h4>Requirements</h4>
@@ -34,7 +34,7 @@
 
     <extensionPoints>
         <extensionPoint qualifiedName="dbp.statistics.projectStateCollector"
-                        interface="org.jetbrains.research.groups.ml_methods.deepbugs.services.logger.collectors.state.project.ProjectStateCollector"/>
+                        interface="org.jetbrains.research.groups.ml_methods.deepbugs.services.logger.collectors.state.ProjectStateCollector"/>
     </extensionPoints>
 
     <extensions defaultExtensionNs="dbp.statistics">
