Exclude tokens zip from the python plugin dir

--- a/py-plugin/build.gradle
+++ b/py-plugin/build.gradle
@@ -8,6 +8,7 @@ intellij {
 
 prepareSandbox {
     from("${projectDir}/models") {
+        exclude "tokenToVector.json.zip"
         into "${pluginName}/models"
     }
     from(zipTree("${projectDir}/models/tokenToVector.json.zip")) {
