Use kotlin build scripts. Rename js plugin

--- a/js-plugin/src/main/resources/DeepBugsJSBundle.properties
+++ b/js-plugin/src/main/resources/DeepBugsJSBundle.properties
@@ -1,6 +1,6 @@
-deepbugs.javascript.binary.operator.inspection.display=DeepBugsJavaScript: Possibly incorrect binary operator
-deepbugs.javascript.binary.operand.inspection.display=DeepBugsJavaScript: Possibly incorrect binary operand
-deepbugs.javascript.swapped.args.inspection.display=DeepBugsJavaScript: Possibly swapped function arguments
+deepbugs.javascript.binary.operator.inspection.display=DeepBugsJS: Possibly incorrect binary operator
+deepbugs.javascript.binary.operand.inspection.display=DeepBugsJS: Possibly incorrect binary operand
+deepbugs.javascript.swapped.args.inspection.display=DeepBugsJS: Possibly swapped function arguments
 deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
 deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
 deepbugs.javascript.swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
