--- a/js-plugin/src/main/resources/META-INF/plugin.xml
+++ b/js-plugin/src/main/resources/META-INF/plugin.xml
@@ -1,11 +1,11 @@
 <idea-plugin url="https://github.com/JetBrains-Research/DeepBugsPlugin">
-    <name>DeepBugsJavaScript</name>
+    <name>DeepBugsJS</name>
     <id>DeepBugsJavaScript</id>
     <vendor url="https://research.jetbrains.org/ru/groups/ml_methods">
         Machine Learning Methods in Software Engineering Research Group
     </vendor>
     <description><![CDATA[
-    DeepBugsJavaScript plugin provides several code inspections intended for detecting bugs and code quality issues.
+    DeepBugsJS plugin provides several code inspections intended for detecting bugs and code quality issues.
     <h4>Requirements</h4>
     Currently available only for a 64-bit JVM.<br>
     Plugin requires model files to perform code analysis.
@@ -20,13 +20,13 @@
     </ol>
     <h4>Available code inspections</h4>
     <ul>
-        <li>DeepBugsJavaScript: Possibly incorrect binary operator.</li>
-        <li>DeepBugsJavaScript: Possibly incorrect binary operand.</li>
-        <li>DeepBugsJavaScript: Possibly swapped function arguments.</li>
+        <li>DeepBugsJS: Possibly incorrect binary operator.</li>
+        <li>DeepBugsJS: Possibly incorrect binary operand.</li>
+        <li>DeepBugsJS: Possibly swapped function arguments.</li>
     </ul>
     <h4>Configuration</h4>
     Each code inspection uses its own threshold value to distinguish correct from incorrect code. Thresholds are configurable
-    and could be set manually in <code>Preferences/Settings | Tools | DeepBugsJavaScript</code>.
+    and could be set manually in <code>Preferences/Settings | Tools | DeepBugsJS</code>.
     ]]></description>
 
     <depends>com.intellij.modules.lang</depends>
@@ -53,7 +53,7 @@
         <applicationService
                 serviceImplementation="org.jetbrains.research.deepbugs.javascript.settings.JSDeepBugsInspectionConfig"/>
         <applicationConfigurable groupId="tools"
-                                 displayName="DeepBugsJavaScript"
+                                 displayName="DeepBugsJS"
                                  instance="org.jetbrains.research.deepbugs.javascript.settings.JSDeepBugsInspectionConfigurable"/>
 
     </extensions>
