Use message bus for config tracking

--- a/js-plugin/src/main/resources/META-INF/plugin.xml
+++ b/js-plugin/src/main/resources/META-INF/plugin.xml
@@ -53,8 +53,9 @@
         <applicationService
                 serviceImplementation="org.jetbrains.research.deepbugs.javascript.settings.JSDeepBugsInspectionConfig"/>
         <applicationConfigurable groupId="tools"
-                                 displayName="DeepBugsJS"
                                  instance="org.jetbrains.research.deepbugs.javascript.settings.JSDeepBugsInspectionConfigurable"/>
+        <backgroundPostStartupActivity
+                implementation="org.jetbrains.research.deepbugs.common.msgbus.DeepBugsProjectInit"/>
 
     </extensions>
 </idea-plugin>
